created the navbar/header section of the website for mobile and desktop view

--- a/index.html
+++ b/index.html
@@ -4,8 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adventure Awaits</title>
+
+    <link rel="stylesheet" href="css/header.css" />
+    <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
+    <!-- Navbar Section -->
+    <nav class="navbar">
+        <a href="/" class="navbar__logo">
+            Adventure Awaits
+        </a>
+
+        <div class="navbar__toggle" id="mobile-menu"> <!--toggle for the mobile menu--> 
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </div>
+
+        <div class="navbar__menu">
+            <a href="/" class="navbar__link">Home</a>
+            <a href="includes/oregon.html" class="navbar__link">Oregon</a>
+            <a href="/" class="navbar__link">Mountains</a>
+            <a href="/" class="navbar__link">Coastal</a>
+
+        </div>
+    </nav>
+
+    <!-- Hero Section -->
     
+    <script src="scripts/app.js"></script>
 </body>
 </html>
