updated the summary__headline text and also the styling for that

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="summary__container">
             <div>
                 <p class="topline">Oregon</p>
-                <h1 class="summary__headline">Outdoor, Food and No Taxes!</h1>
+                <h1 class="summary__headline">Enjoy a cup of coffee in the wilderness</h1>
                 <div class="summary__features">
                     <p class="summary__feature">
                         <i class="fas fa-campground"></i>The 7 Wonders of Oregon
