created the gallery images of the outdoors on the index.html page

--- a/index.html
+++ b/index.html
@@ -111,6 +111,43 @@
     </div>
 
     <!-- Photo Gallery Adventures Section -->
+    <div class="gallery">
+        <div class="gallery__wrapper">
+            <div class="gallery__text">
+                <p class="topline">Wonders of Oregon</p>
+                <h1>Home of the green!</h1>
+                <p class="gallery__desc">
+                    Oregon has so many beautiful outdoorsy things to offer. Check out some of the images below!
+                </p>
+            </div>
+            <div class="gallery__text">
+                <p class="topline">Waterfalls of Oregon</p>
+                <h1>Multnomah Falls</h1>
+                <p class="gallery__desc">
+                    One of the most famous, classic waterfalls that Oregon has to offer to all tourist
+                </p>
+            </div>
+            <div class="gallery__card">
+                <p>Multnomah Falls</p>
+                <img src="images/oregon-multnomah-falls.jpg" alt="multnomah-falls" class="gallery__img" />
+            </div>
+            <div class="gallery__card">
+                <p>Oregon Coast</p>
+                <img src="images/oregon-coast.jpg" alt="oregon-coast" class="gallery__img" />
+            </div>
+            <div class="gallery__card">
+                <p>Smith Rock</p>
+                <img src="images/oregon-smith-rock-monkey-head.jpg" alt="smith-rock" class="gallery__img" />
+            </div>
+            <div class="gallery__card">
+                <p>Columbia River Gorge</p>
+                <img src="images/oregon-waterfall.jpg" alt="columbia-river-waterfall" class="gallery__img" />
+            </div>
+        </div>
+    </div>
+
+    <!-- Email/Form Section -->
+
     <script src="scripts/app.js"></script>
 </body>
 </html>
