addition of the coming soon page for the non-created pages

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 
         <div class="navbar__menu">
             <a href="/" class="navbar__link">Home</a>
-            <a href="includes/oregon.html" class="navbar__link">Oregon</a>
-            <a href="/" class="navbar__link">Gallery</a>
-            <a href="/" class="navbar__link">Blog</a>
-            <a href="/" class="navbar__link navbar__btn">Contact Me</a> 
+            <a href="includes/coming-soon.html" class="navbar__link">Oregon</a>
+            <a href="includes/coming-soon.html" class="navbar__link">Gallery</a>
+            <a href="includes/coming-soon.html" class="navbar__link">Blog</a>
+            <a href="includes/coming-soon.html" class="navbar__link navbar__btn">Contact Me</a> 
             <!-- need to do more implementation later -->
         </div>
     </nav>
@@ -115,9 +115,9 @@
         <div class="gallery__wrapper">
             <div class="gallery__text">
                 <p class="topline">Wonders of Oregon</p>
-                <h1>Home of the green!</h1>
+                <h1>Truly a work of nature</h1>
                 <p class="gallery__desc">
-                    Oregon has so many beautiful outdoorsy things to offer. Check out some of the images below!
+                    Oregon is home to the deepest lake in the United States and also many other awesome nature things!
                 </p>
             </div>
             <div class="gallery__text">
