moved the coming-soon.html page to the home directory to make href easier for the navbar items

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 
         <div class="navbar__menu">
             <a href="/" class="navbar__link">Home</a>
-            <a href="includes/coming-soon.html" class="navbar__link">Oregon</a>
-            <a href="includes/coming-soon.html" class="navbar__link">Gallery</a>
-            <a href="includes/coming-soon.html" class="navbar__link">Blog</a>
-            <a href="includes/coming-soon.html" class="navbar__link navbar__btn">Contact Me</a> 
+            <a href="coming-soon.html" class="navbar__link">Oregon</a>
+            <a href="coming-soon.html" class="navbar__link">Gallery</a>
+            <a href="coming-soon.html" class="navbar__link">Blog</a>
+            <a href="coming-soon.html" class="navbar__link navbar__btn">Contact Me</a> 
             <!-- need to do more implementation later -->
         </div>
     </nav>
