--- a/coming-soon.html
+++ b/coming-soon.html
@@ -10,9 +10,9 @@
     
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     
-    <link rel="stylesheet" href="../css/header.css" />
-    <link rel="stylesheet" href="../css/styles.css" />
-    <link rel="stylesheet" href="../css/coming-soon.css">
+    <link rel="stylesheet" href="/css/header.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="/css/coming-soon.css">
 </head>
 
 <body>
@@ -30,10 +30,10 @@
 
         <div class="navbar__menu">
             <a href="/" class="navbar__link">Home</a>
-            <a href="includes/coming-soon.html" class="navbar__link">Oregon</a>
-            <a href="includes/coming-soon.html" class="navbar__link">Gallery</a>
-            <a href="includes/coming-soon.html" class="navbar__link">Blog</a>
-            <a href="includes/coming-soon.html" class="navbar__link navbar__btn">Contact Me</a> 
+            <a href="/coming-soon.html" class="navbar__link">Oregon</a>
+            <a href="/coming-soon.html" class="navbar__link">Gallery</a>
+            <a href="/coming-soon.html" class="navbar__link">Blog</a>
+            <a href="/coming-soon.html" class="navbar__link navbar__btn">Contact Me</a> 
             <!-- need to do more implementation later -->
         </div>
     </nav>
