Changed some of the wording on the index.html page

--- a/index.html
+++ b/index.html
@@ -48,16 +48,16 @@
         <div class="summary__container">
             <div>
                 <p class="topline">Oregon</p>
-                <h1 class="summary__headline">Enjoy a cup of coffee in the wilderness</h1>
+                <h1 class="summary__headline">Coffee and the wilderness</h1>
                 <div class="summary__features">
                     <p class="summary__feature">
-                        <i class="fas fa-campground"></i>The 7 Wonders of Oregon
+                        <i class="fas fa-hiking"></i>Trails
                     </p>
                     <p class="summary__feature">
-                        <i class="fas fa-mountain"></i>Oregon Mountains
+                        <i class="fas fa-mountain"></i>Elevations
                     </p>
                     <p class="summary__feature">
-                        <i class="fas fa-water"></i>Oregon Coast
+                        <i class="fas fa-water"></i>Coastal
                     </p>
                 </div>
             </div>
@@ -69,43 +69,43 @@
 
     <!-- Outdoor Hiking Sections -->
     <div class="hiking">
-        <h1>Go Hiking Today!</h1>
-        <p class="hiking__desc">The outdoors can't wait!</p>
+        <h1>Take a Hike Today!</h1>
+        <p class="hiking__desc">Travel the outdoors today, it can't wait!</p>
         <div class="hiking__wrapper">    
             <div class="hiking__card">   
                 <div class="hiking__title">
                     <i class="fas fa-hiking card-icon"></i>
-                    <h3>Easy Hikes</h3>
+                    <h3>First Time Hikers</h3>
                 </div>
                 <div class="hiking__summary">
-                    <p>Short, quick and easy trails!</p>
-                    <p>Closeby the Portland area!</p>
+                    <p>Easy and short trails that require little to no training</p>
+                    <p>Some of these places are only 30 minutes drive away from Portland!</p>
                 </div>
-                <a href="/" class="button">Easy</a>
+                <a href="https://www.alltrails.com/us/oregon" class="button">Easy Hikes</a>
             </div>
 
             <div class="hiking__card">   
                 <div class="hiking__title">
                     <i class="fas fa-hiking card-icon"></i>
-                    <h3>Moderate Hikes</h3>
+                    <h3>Intermediate Hiker</h3>
                 </div>
                 <div class="hiking__summary">
-                    <p>Take your hike to the next level!</p>
-                    <p>Challenge yourself today!</p>
+                    <p>Got some experience hiking and want to take it to the next level!</p>
+                    <p>Some of these hikes require a bit more preparation and also longer durations</p>
                 </div>
-                <a href="/" class="button">Moderate</a>
+                <a href="https://www.alltrails.com/us/oregon" class="button">Moderate Hikes</a>
             </div>
 
             <div class="hiking__card">   
                 <div class="hiking__title">
                     <i class="fas fa-hiking card-icon"></i>
-                    <h3>Hard Hikes</h3>
+                    <h3>Advanced Hikers</h3>
                 </div>
                 <div class="hiking__summary">
-                    <p>Test your limits!</p>
-                    <p>Rewarding on another level!</p>
+                    <p>Hikers who live and breath hikes! These hikers know almost everything about their trips!</p>
+                    <p>Some of these hikes may take the whole day if not several days with proper equipments only!</p>
                 </div>
-                <a href="/" class="button">Hard</a>
+                <a href="https://www.alltrails.com/us/oregon" class="button">Difficult Hikes</a>
             </div>
         </div>
     </div>
@@ -115,16 +115,16 @@
         <div class="gallery__wrapper">
             <div class="gallery__text">
                 <p class="topline">Wonders of Oregon</p>
-                <h1>Truly a work of nature</h1>
+                <h1>Images does not do enough justice</h1>
                 <p class="gallery__desc">
-                    Oregon is home to the deepest lake in the United States and also many other awesome nature things!
+                    Explore the outdoors with mountains, trails, waterfalls and even the Pacific Coast!
                 </p>
             </div>
             <div class="gallery__text">
-                <p class="topline">Waterfalls of Oregon</p>
-                <h1>Multnomah Falls</h1>
+                <p class="topline">Home of the Outdoors</p>
+                <h1>Seeing is believing</h1>
                 <p class="gallery__desc">
-                    One of the most famous, classic waterfalls that Oregon has to offer to all tourist
+                    Some of these wonderful places are close to the city limits!
                 </p>
             </div>
             <div class="gallery__card">
