added the email/form section and the footer

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <div class="hiking__card">   
                 <div class="hiking__title">
                     <i class="fas fa-hiking card-icon"></i>
-                    <h3>First Time Hikers</h3>
+                    <h3>First Time <Br> Hikers</h3>
                 </div>
                 <div class="hiking__summary">
                     <p>Easy and short trails that require little to no training</p>
@@ -87,7 +87,7 @@
             <div class="hiking__card">   
                 <div class="hiking__title">
                     <i class="fas fa-hiking card-icon"></i>
-                    <h3>Intermediate Hiker</h3>
+                    <h3>Intermediate <Br> Hiker</h3>
                 </div>
                 <div class="hiking__summary">
                     <p>Got some experience hiking and want to take it to the next level!</p>
@@ -99,11 +99,11 @@
             <div class="hiking__card">   
                 <div class="hiking__title">
                     <i class="fas fa-hiking card-icon"></i>
-                    <h3>Advanced Hikers</h3>
+                    <h3>Advanced <Br> Hikers</h3>
                 </div>
                 <div class="hiking__summary">
-                    <p>Hikers who live and breath hikes! These hikers know almost everything about their trips!</p>
-                    <p>Some of these hikes may take the whole day if not several days with proper equipments only!</p>
+                    <p>Hikers who live and breath the outdoors and experts!</p>
+                    <p>Some of these hikes may take more than a day with proper equipments only!</p>
                 </div>
                 <a href="https://www.alltrails.com/us/oregon" class="button">Difficult Hikes</a>
             </div>
@@ -147,6 +147,61 @@
     </div>
 
     <!-- Email/Form Section -->
+    <div class="email">
+        <div class="email__content">
+            <h1>Get Access to More Outdoor Informations!</h1>
+            <p>Sign up for the monthly newsletter with updates to new adventures!</p>
+
+            <form action="#">
+                <div class="form__wrap">
+                    <label for="email">
+                        <input type="email" placeholder="Enter your email" id="email">
+                    </label>
+                    <button class="button" type="submit">Sign Up</button>
+                </div>
+            </form>
+        </div>
+    </div>
+
+    <!-- Footer Section -->
+    <div class="footer">
+        <div class="footer__wrapper">
+            <div class="footer__desc">
+                <h1>Adventure Awaits</h1>
+                <p>Oregon's outdoors ready to explore</p>
+                <p id="phone">(503) - 000 - 0000</p>
+            </div>
+            <div class="footer__links">
+                <div class="footer__title">
+                    Adventure Awaits
+                </div>
+                <a href="#" class="footer__link">Oregon</a>
+                <a href="#" class="footer__link">Gallery</a>
+                <a href="#" class="footer__link">Blog</a>
+                <a href="#" class="footer__link">Contact Me</a>
+            </div>
+        </div>
+        <div class="footer__wrapper">
+            <div class="footer__links">
+                <div class="footer__title">
+                    Equipment Sites
+                </div>
+                <a href="https://www.rei.com/" target="_blank" class="footer__link">REI</a>
+                <a href="https://www.columbia.com/" target="_blank" class="footer__link">Columbia</a>
+                <a href="https://www.mountainhardwear.com/" target="_blank"class="footer__link">Mountain Hardware</a>
+                <a href="https://www.prana.com/" target="_blank" class="footer__link">PrAna</a>    
+            </div>
+            <div class="footer__links">
+                <div class="footer__title">
+                    Useful Resources
+                </div>
+                <a href="#" target="_blank" class="footer__link">Hiker's Guide</a>
+                <a href="#" target="_blank" class="footer__link">Top gears</a>
+                <a href="#" target="_blank" class="footer__link">10 most important</a>
+                <a href="#" target="_blank" class="footer__link">Blogs</a>    
+            </div>
+        </div>
+    </div>
 
     <script src="scripts/app.js"></script>
 </body>
