added JavaScript animations and also updated some of the links in the footer

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <link rel="stylesheet" href="css/header.css" />
     <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/footer.css" />
 </head>
 <body>
     <!-- Navbar Section -->
@@ -37,9 +38,9 @@
     <!-- Hero Section -->
     <div class="hero">
         <div class="hero__content">
-            <h1>Adventure Awaits</h1>
-            <p>Explore the Outdoors</p>
-            <a href="/" class="button">Oregon</a>
+            <h1 class="animate-hero">Adventure Awaits</h1>
+            <p class="animate-hero">Explore the Outdoors</p>
+            <a href="/" class="button animate-hero">Oregon</a>
         </div>
     </div>
 
@@ -47,32 +48,32 @@
     <div class="summary">
         <div class="summary__container">
             <div>
-                <p class="topline">Oregon</p>
-                <h1 class="summary__headline">Coffee and the wilderness</h1>
+                <p class="topline animate-summary">Oregon</p>
+                <h1 class="summary__headline animate-summary">Coffee and the wilderness</h1>
                 <div class="summary__features">
-                    <p class="summary__feature">
+                    <p class="summary__feature animate-summary">
                         <i class="fas fa-hiking"></i>Trails
                     </p>
-                    <p class="summary__feature">
+                    <p class="summary__feature animate-summary">
                         <i class="fas fa-mountain"></i>Elevations
                     </p>
-                    <p class="summary__feature">
+                    <p class="summary__feature animate-summary">
                         <i class="fas fa-water"></i>Coastal
                     </p>
                 </div>
             </div>
             <div>
-                <img src="./images/coffee-wilderness.jpg" alt="Coffee in the Wilderness" class="summary__img">
+                <img src="./images/coffee-wilderness.jpg" alt="Coffee in the Wilderness" class="summary__img animate-img">
             </div>
         </div>
     </div>
 
     <!-- Outdoor Hiking Sections -->
     <div class="hiking">
-        <h1>Take a Hike Today!</h1>
-        <p class="hiking__desc">Travel the outdoors today, it can't wait!</p>
+        <h1 class="animate-hiking">Take a Hike Today!</h1>
+        <p class="hiking__desc animate-hiking">Travel the outdoors today, it can't wait!</p>
         <div class="hiking__wrapper">    
-            <div class="hiking__card">   
+            <div class="hiking__card animate-card">   
                 <div class="hiking__title">
                     <i class="fas fa-hiking card-icon"></i>
                     <h3>First Time <Br> Hikers</h3>
@@ -81,10 +82,10 @@
                     <p>Easy and short trails that require little to no training</p>
                     <p>Some of these places are only 30 minutes drive away from Portland!</p>
                 </div>
-                <a href="https://www.alltrails.com/us/oregon" class="button">Easy Hikes</a>
+                <a href="https://www.oregonhikers.org/field_guide/Category:Easy_Hikes" class="button">Easy Hikes</a>
             </div>
 
-            <div class="hiking__card">   
+            <div class="hiking__card animate-card">   
                 <div class="hiking__title">
                     <i class="fas fa-hiking card-icon"></i>
                     <h3>Intermediate <Br> Hiker</h3>
@@ -93,10 +94,10 @@
                     <p>Got some experience hiking and want to take it to the next level!</p>
                     <p>Some of these hikes require a bit more preparation and also longer durations</p>
                 </div>
-                <a href="https://www.alltrails.com/us/oregon" class="button">Moderate Hikes</a>
+                <a href="https://www.oregonhikers.org/field_guide/Category:Moderate_Hikes" class="button">Moderate Hikes</a>
             </div>
 
-            <div class="hiking__card">   
+            <div class="hiking__card animate-card">   
                 <div class="hiking__title">
                     <i class="fas fa-hiking card-icon"></i>
                     <h3>Advanced <Br> Hikers</h3>
@@ -105,7 +106,7 @@
                     <p>Hikers who live and breath the outdoors and experts!</p>
                     <p>Some of these hikes may take more than a day with proper equipments only!</p>
                 </div>
-                <a href="https://www.alltrails.com/us/oregon" class="button">Difficult Hikes</a>
+                <a href="https://www.oregonhikers.org/field_guide/Category:Difficult_Hikes" class="button">Difficult Hikes</a>
             </div>
         </div>
     </div>
@@ -113,33 +114,33 @@
     <!-- Photo Gallery Adventures Section -->
     <div class="gallery">
         <div class="gallery__wrapper">
-            <div class="gallery__text">
+            <div class="gallery__text animate-gallery">
                 <p class="topline">Wonders of Oregon</p>
                 <h1>Images does not do enough justice</h1>
                 <p class="gallery__desc">
                     Explore the outdoors with mountains, trails, waterfalls and even the Pacific Coast!
                 </p>
             </div>
-            <div class="gallery__text">
+            <div class="gallery__text animate-gallery">
                 <p class="topline">Home of the Outdoors</p>
                 <h1>Seeing is believing</h1>
                 <p class="gallery__desc">
                     Some of these wonderful places are close to the city limits!
                 </p>
             </div>
-            <div class="gallery__card">
+            <div class="gallery__card animate-gallery">
                 <p>Multnomah Falls</p>
                 <img src="images/oregon-multnomah-falls.jpg" alt="multnomah-falls" class="gallery__img" />
             </div>
-            <div class="gallery__card">
+            <div class="gallery__card animate-gallery">
                 <p>Oregon Coast</p>
                 <img src="images/oregon-coast.jpg" alt="oregon-coast" class="gallery__img" />
             </div>
-            <div class="gallery__card">
+            <div class="gallery__card animate-gallery">
                 <p>Smith Rock</p>
                 <img src="images/oregon-smith-rock-monkey-head.jpg" alt="smith-rock" class="gallery__img" />
             </div>
-            <div class="gallery__card">
+            <div class="gallery__card animate-gallery">
                 <p>Columbia River Gorge</p>
                 <img src="images/oregon-waterfall.jpg" alt="columbia-river-waterfall" class="gallery__img" />
             </div>
@@ -149,10 +150,10 @@
     <!-- Email/Form Section -->
     <div class="email">
         <div class="email__content">
-            <h1>Get Access to More Outdoor Informations!</h1>
-            <p>Sign up for the monthly newsletter with updates to new adventures!</p>
+            <h1 class="animate-email">Get Access to More Outdoor Informations!</h1>
+            <p class="animate-email">Sign up for the monthly newsletter with updates to new adventures!</p>
 
-            <form action="#">
+            <form action="#" class="animate-email">
                 <div class="form__wrap">
                     <label for="email">
                         <input type="email" placeholder="Enter your email" id="email">
@@ -186,23 +187,26 @@
                 <div class="footer__title">
                     Equipment Sites
                 </div>
-                <a href="https://www.rei.com/" target="_blank" class="footer__link">REI</a>
+                <a href="https://www.rei.com/" target="_blank" class="footer__link">REI Co-op</a>
                 <a href="https://www.columbia.com/" target="_blank" class="footer__link">Columbia</a>
-                <a href="https://www.mountainhardwear.com/" target="_blank"class="footer__link">Mountain Hardware</a>
                 <a href="https://www.prana.com/" target="_blank" class="footer__link">PrAna</a>    
+                <a href="https://www.mountainhardwear.com/" target="_blank"class="footer__link">Mountain Hardware</a>
             </div>
             <div class="footer__links">
                 <div class="footer__title">
                     Useful Resources
                 </div>
-                <a href="#" target="_blank" class="footer__link">Hiker's Guide</a>
-                <a href="#" target="_blank" class="footer__link">Top gears</a>
-                <a href="#" target="_blank" class="footer__link">10 most important</a>
-                <a href="#" target="_blank" class="footer__link">Blogs</a>    
+                <a href="https://hikingguy.com/how-to-hike/hiking-for-beginners-11-essential-tips/" target="_blank" class="footer__link">Beginner's Guide</a>
+                <a href="https://hikingguy.com/best-hiking-gear/" target="_blank" class="footer__link">Best Hiking Gears</a>
+                <a href="https://blog.liftopia.com/10-essential-hiking-tips-beginner-hike/" target="_blank" class="footer__link">10 Essential Hiking Tips</a>
+                <a href="https://www.oregonhikers.org/field_guide/main_page" target="_blank" class="footer__link">Oregon Hikers</a>    
             </div>
         </div>
     </div>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/ScrollTrigger.min.js"></script>
+    
     <script src="scripts/app.js"></script>
 </body>
 </html>
