added the feedback form

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <a href="coming-soon.html" class="navbar__link">Oregon</a>
             <a href="coming-soon.html" class="navbar__link">Gallery</a>
             <a href="coming-soon.html" class="navbar__link">Blog</a>
+            <a href="https://forms.gle/MdHt4XWveDQzRnbE7" target="_blank" class="navbar__link">Feedback V1</a>
             <a href="coming-soon.html" class="navbar__link navbar__btn">Contact Me</a> 
             <!-- need to do more implementation later -->
         </div>
@@ -151,7 +152,7 @@
     <div class="email">
         <div class="email__content">
             <h1 class="animate-email">Get Access to More Outdoor Informations!</h1>
-            <p class="animate-email">Sign up for the monthly newsletter with updates to new adventures!</p>
+            <p class="animate-email">Sign up for monthly newsletter! (currently does not do anything) </p>
 
             <form action="#" class="animate-email">
                 <div class="form__wrap">
