page set up structure has been compelted, need to revamp texts and update animations

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <!-- Oregon Outdoor Summary Section -->
     <div class="summary">
         <div class="summary__container">
-            <div>
+            <div class="summary__text">
                 <p class="topline animate-summary">Oregon</p>
                 <h1 class="summary__headline animate-summary">Coffee and the wilderness</h1>
                 <div class="summary__features">
@@ -63,7 +63,7 @@
                     </p>
                 </div>
             </div>
-            <div>
+            <div class="summary__image">
                 <img src="./images/coffee-wilderness.jpg" alt="Coffee in the Wilderness" class="summary__img animate-img">
             </div>
         </div>
